--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
                 if (!text || !author) {
                   return;
                 }
-                // TODO: send request to the server
+                this.props.onCommentSubmit({author: author, text: text});
                 this.setState({author: '', text: ''});
           },
         render() {
@@ -124,6 +124,20 @@
                   }.bind(this)
                 });
             },
+            handleCommentSubmit: function(comment) {
+                $.ajax({
+                  url: this.props.url,
+                  dataType: 'json',
+                  type: 'POST',
+                  data: comment,
+                  success: function(data) {
+                    this.setState({data: data});
+                  }.bind(this),
+                  error: function(xhr, status, err) {
+                    console.error(this.props.url, status, err.toString());
+                  }.bind(this)
+                });
+            }
             componentDidMount() {
                 this.loadCommentsFromServer();
                 setInterval(this.loadCommentsFromServer, this.props.pollInterval)
@@ -133,7 +147,7 @@
                 <div className="commentBox">
                     <h1>Comments</h1>
                     <CommentList data={this.state.data}/>
-                    <CommentForm />
+                    <CommentForm onCommentSubmit={this.handleCommentSubmit} />
                 </div>
               );
             }
